--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ Machine Learning Summer School 2019 (Stellenbosch, South Africa)/slides/Marco Cu
 Machine Learning Summer School 2019 (Stellenbosch, South Africa)/slides/David Blei - Variational Inference.pdf
 Machine Learning Summer School 2019 (Stellenbosch, South Africa)/slides/Luc de Raedt - Statistical Relational Learning.key
 Machine Learning Summer School 2019 (Stellenbosch, South Africa)/slides/Tanya Berger-Wolf - Networks.pptx
+Reinforcement Learning Summer School 2019 (Lille, France)/certif/
