--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,6 @@ Machine Learning Summer School 2019 (Stellenbosch, South Africa)/slides/David Bl
 Machine Learning Summer School 2019 (Stellenbosch, South Africa)/slides/Luc de Raedt - Statistical Relational Learning.key
 Machine Learning Summer School 2019 (Stellenbosch, South Africa)/slides/Tanya Berger-Wolf - Networks.pptx
 Reinforcement Learning Summer School 2019 (Lille, France)/certif/
+PRAIRIE Artificial Intelligence Summer School 2019 (Paris, France)/slides/paiss_kumar_climate.pptx
+PRAIRIE Artificial Intelligence Summer School 2019 (Paris, France)/slides/paiss_efros_vision.pdf
+
