--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,5 @@ Reinforcement Learning Summer School 2019 (Lille, France)/certif/
 PRAIRIE Artificial Intelligence Summer School 2019 (Paris, France)/slides/paiss_kumar_climate.pptx
 PRAIRIE Artificial Intelligence Summer School 2019 (Paris, France)/slides/paiss_efros_vision.pdf
 
+# Personal files
+Machine Learning Summer School 2019 (Stellenbosch, South Africa)/certif/*
